# Django-app

./: Dockerfile  README.md  devices.csv  docker-compose.yaml  new_orders.csv  pyproject.toml  requirements.txt
mysite/: log.txt  quieries.sql
mysite/blogapp/: forms.py  models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_form.html  article_list.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/logs/: log.txt  log.txt.1  log.txt.2
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py
mysite/myauth/templates/myauth/: about-me.html  base.html  login.html  register.html  users_list.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/new_blogapp/: admin.py  apps.py  models.py  sitemap.py  urls.py  views.py
mysite/new_blogapp/migrations/: 0001_initial.py
mysite/new_blogapp/templates/new_blogapp/: article_detail.html  article_form.html  article_list.html
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/requestdataapp/templates/requestdataapp/: base.html  file-upload.html  request-query-params.html  user-bio-form.html
mysite/shopapp/: admin.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/management/commands/: agg.py  bulk_actions.py  create_orders.py  create_products.py  selecting_fields.py  update_order.py
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_remove_product_archived.py  0006_product_archived.py  0007_alter_product_options.py  0008_alter_order_options_alter_product_options_and_more.py  0009_alter_product_description_alter_product_name.py
mysite/shopapp/templates/shopapp/: base.html  footer.html  groups_list.html  order_changelist.html  order_confirm_delete.html  order_detail.html  order_form.html  order_list.html  order_update_form.html  product_confirm_delete.html  product_details.html  product_form.html  product_update_form.html  products_changelist.html  products_list.html  shop-index.html  user_orders_list.html
